--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 awscli==1.16.49
-botocore==1.12.39
+boto3==1.9.64
+botocore==1.12.64
 certifi==2018.10.15
 chardet==3.0.4
 colorama==0.3.9
 docutils==0.14
+futures==3.2.0
 idna==2.7
 jmespath==0.9.3
 oauthlib==2.1.0
