--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,64 @@
 awscli==1.16.49
-boto3==1.9.64
-botocore==1.12.64
+backcall==0.1.0
+backports-abc==0.5
+bleach==3.0.2
+boto3==1.9.57
+botocore==1.12.57
 certifi==2018.10.15
 chardet==3.0.4
 colorama==0.3.9
+Cython==0.29.2
+decorator==4.3.0
+defusedxml==0.5.0
 docutils==0.14
-futures==3.1.1
+entrypoints==0.2.3
 idna==2.7
+ipykernel==5.1.0
+ipython==6.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+jedi==0.13.2
+Jinja2==2.10
 jmespath==0.9.3
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+MarkupSafe==1.1.0
+mistune==0.8.4
+nbconvert==5.4.0
+nbformat==4.4.0
+notebook==5.7.4
 oauthlib==2.1.0
+pandocfilters==1.4.2
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
+prometheus-client==0.5.0
+prompt-toolkit==1.0.15
+ptyprocess==0.6.0
 pyasn1==0.4.4
+Pygments==2.3.1
 PySocks==1.6.8
 python-dateutil==2.7.5
 PyYAML==3.13
+pyzmq==17.1.2
+qtconsole==4.4.3
 requests==2.20.0
 requests-oauthlib==1.0.0
 rsa==3.4.2
 s3transfer==0.1.13
+Send2Trash==1.5.0
+simplegeneric==0.8.1
 six==1.11.0
+terminado==0.8.1
+testpath==0.4.2
+tornado==5.1.1
+traitlets==4.3.2
 tweepy==3.6.0
+typing==3.6.6
 urllib3==1.24.1
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
