--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-awscli==1.16.49
+appnope==0.1.0
 backcall==0.1.0
-backports-abc==0.5
 bleach==3.0.2
-boto3==1.9.57
-botocore==1.12.57
-certifi==2018.10.15
+boto3==1.9.66
+botocore==1.12.66
+certifi==2018.11.29
 chardet==3.0.4
-colorama==0.3.9
-Cython==0.29.2
 decorator==4.3.0
 defusedxml==0.5.0
 docutils==0.14
+emoji==0.5.1
 entrypoints==0.2.3
-idna==2.7
+GDAL==2.3.0
+idna==2.8
+ijson==2.3
 ipykernel==5.1.0
-ipython==6.5.0
+ipython==7.2.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.2
@@ -23,42 +23,43 @@ jmespath==0.9.3
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.4
-jupyter-console==5.2.0
+jupyter-console==6.0.0
 jupyter-core==4.4.0
 MarkupSafe==1.1.0
 mistune==0.8.4
 nbconvert==5.4.0
 nbformat==4.4.0
+nose==1.3.7
 notebook==5.7.4
-oauthlib==2.1.0
+numpy==1.14.4
+pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.5
 prometheus-client==0.5.0
-prompt-toolkit==1.0.15
+prompt-toolkit==2.0.7
+psutil==5.4.6
 ptyprocess==0.6.0
-pyasn1==0.4.4
+py4j==0.10.8.1
 Pygments==2.3.1
-PySocks==1.6.8
 python-dateutil==2.7.5
+pytz==2018.7
 PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.4.3
-requests==2.20.0
-requests-oauthlib==1.0.0
-rsa==3.4.2
+requests==2.21.0
 s3transfer==0.1.13
+searchtweets==1.7.4
 Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.11.0
+six==1.12.0
 terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
 traitlets==4.3.2
-tweepy==3.6.0
-typing==3.6.6
+tweet-parser==1.13.1
 urllib3==1.24.1
+virtualenv==16.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.4.2
