--- a/requirements.txt
+++ b/requirements.txt
@@ -50,9 +50,12 @@ pyzmq==17.1.2
 qtconsole==4.4.3
 requests==2.21.0
 s3transfer==0.1.13
+scikit-learn==0.20.2
+scipy==1.2.0
 searchtweets==1.7.4
 Send2Trash==1.5.0
 six==1.12.0
+sklearn==0.0
 terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
